--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:style && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
-    "prepare": "husky install"
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"   
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint --cache",
@@ -44,7 +43,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
-    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
